z-index bug fix on menu

--- a/src/components/UI/Header/Menu/style.module.scss
+++ b/src/components/UI/Header/Menu/style.module.scss
@@ -17,7 +17,7 @@
   }
   &.open {
     transform: none;
-    z-index: 99;
+    z-index: 100;
     opacity: 1;
   }
   .element {
