--- a/src/components/UI/Header/MobileMenu/style.module.scss
+++ b/src/components/UI/Header/MobileMenu/style.module.scss
@@ -7,7 +7,7 @@
   background-color: #fff;
   width: 100%;
   overflow-x: hidden;
-  z-index: 99;
+  z-index: 100;
   transition: all 0.4s ease-in-out;
   transform: translateY(-94vh);
   opacity: 0;
